# nao-picoclass

./: .gitignore  CMakeLists.txt  README.md  main.cpp  pc_part.cpp  picomodule.cpp  picomodule.hpp
.qi/: path.conf  qibuild.xml  worktree.xml
PicoModule/: CMakeLists.txt  main.cpp  picomodule.cpp  picomodule.hpp  qiproject.xml
Skripte/: bounding_square.py  obrada.py  testiraj.py
python/: background.py  generiraj.py  obrada_075.py  picoStream.py  segmentiraj.py  show_pics_zaba.py
